--- a/Squares/Squares/Squares-Info.plist
+++ b/Squares/Squares/Squares-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>Forstulen.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.forstulen.squares</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
